<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android">
   
	<LinearLayout 
	    android:gravity="center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">   
 
	    <ScrollView 
	        android:scrollbarAlwaysDrawVerticalTrack="false"
	        android:id="@+id/preview_dashboard_v" 
	        android:background="#ffebebeb" 
	        android:scrollbars="vertical" 
	        android:fadingEdge="vertical"    
	        android:layout_width="0.0dip"    
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
	        	                
            <LinearLayout 
                android:orientation="vertical" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">                	            
	            <Button
			        android:id="@+id/btnGetStatus"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"		
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btngetprinterstatus" />
	            
	            <Button
			        android:id="@+id/btnOpenCashDrawer"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btnopencashdrawer" />
	           	            
	            <Button
			        android:id="@+id/btnSampleReceipt"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"	
			        android:onClick="onClickDo"
					android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
					android:visibility="gone"
			        android:text="@string/activity_esc_function_btnsamplereceipt" />
	            
	            <Button
			        android:id="@+id/btn1DBarcodes"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:layout_margin="5dp"
                    android:background="@drawable/selectbackground"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btn1dbarcodes" />
	            
	            <Button
			        android:id="@+id/btnQRCode"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btnqrcode" />
	            
	            <Button
			        android:id="@+id/btnPDF417"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:visibility="gone"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btnpdf417" />
	            
	            <Button
			        android:id="@+id/btnCut"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
					android:visibility="gone"
			        android:text="@string/activity_esc_function_btncut" />
	            
	            <Button
			        android:id="@+id/btnTextFormat"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
					android:textSize="20sp"
                    android:textColor="#ffffff"
			        android:text="@string/activity_esc_function_btntextformatting" />
	            
	            <Button
			        android:id="@+id/btnPrintImageFile"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btnprintimagefile" />
	            
	            <Button
			        android:id="@+id/btnPrintPRNFile"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
			        android:visibility="gone"
                    android:textColor="#ffffff"
					android:textSize="20sp"
			        android:text="@string/activity_esc_function_btnprintprnfile" />
	            
	            <!-- <LinearLayout 
	                android:orientation="horizontal" 
	                android:layout_width="fill_parent" 
	                android:layout_height="wrap_content">
		            <Button
				        android:id="@+id/btnPrintPRNFile"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:onClick="onClickDo"
				        android:layout_weight="1"
				        android:text="@string/activity_esc_function_btnprintprnfile" />
		            <EditText
				        android:id="@+id/edtTimes"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"	            
				        android:numeric="integer"     
				        android:layout_weight="3"
				        android:singleLine="true" />
	            </LinearLayout>  -->
	            
	            <Button
			        android:id="@+id/btnExpress"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
					android:textSize="20sp"
					android:visibility="gone"
			        android:text="@string/activity_esc_function_btnexpress" />
	            
	            <Button
			        android:id="@+id/btn_background"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:onClick="onClickDo"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
					android:textSize="20sp"
                    android:textColor="#ffffff"
			        android:text="@string/activity_esc_function_btnimagemanage" />
	            
	            <Button
			        android:id="@+id/btn_printSN"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
                    android:background="@drawable/selectbackground"
                    android:layout_margin="5dp"
					android:textSize="20sp"
                    android:textColor="#ffffff"
					android:onClick="onClickDo"
			        android:text="@string/activity_esc_function_btngetremainingpower" />
				<Button
					android:id="@+id/btnReverseFeed"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:onClick="onClickDo"
					android:background="@drawable/selectbackground"
					android:layout_margin="5dp"
					android:textColor="#ffffff"
					android:textSize="20sp"
					android:visibility="gone"
					android:text="@string/activity_esc_function_btnReverseFeedNLine" />
				<Button
					android:id="@+id/btn_auto_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:onClick="onClickDo"
					android:background="@drawable/selectbackground"
					android:layout_margin="5dp"
					android:textColor="#ffffff"
					android:textSize="20sp"
					android:visibility="gone"
					android:text="@string/activity_auto_text" />

	        </LinearLayout>
	    </ScrollView>
	</LinearLayout>
</LinearLayout>
